# eliza-agent-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  server.py
.memory/: Makefile  summary.json
eliza/: agent.py  memory.py  models.py
eliza/agents/: full.py  full_operation.py  operation.py  question.py  router.py  translator.py  trivial.py
eliza/prompt/: ELIZA.md  LOOP_AFTER_INSTRUCTION.md  LOOP_BEFORE_INSTRUCTION.md  MEMORY_INSTRUCTION.md  QUESTION_SEARCH_REQUIRED_INSTRUCTION.md  REASONING_INSTRUCTION.md  SKILL_FETCHED_INSTRUCTION.md  SKILL_INSTRUCTION.md  SLEEP_INSTRUCTION.md  TOOL_LOOP_INSTRUCTION.md  TOOL_REQUIRED_INSTRUCTION.md
eliza/tools/: __init__.py  alarm.py  bash.py  browser.py  clipboard.py  memory.py  schedule.py  skill.py  subagents.py  switchbot.py  tenki.py  todo.py  youtube.py
skill/: aircon.md  alarm.md  deep_research.md  todo.md  translate.md  video.md  youtube.md
tools/: __init__.py  switchbot.py
